<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <!-- Highlights -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/Destaque"
        android:src="@drawable/enterthegungeon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tags -->
    <LinearLayout
        android:id="@+id/infoDestaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RPG"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Roguelike"

                app:layout_constraintTop_toTopOf="@id/button2"
                app:layout_constraintBottom_toBottomOf="@id/button2"
                app:layout_constraintStart_toEndOf="@id/button2"
                app:layout_constraintEnd_toStartOf="@id/button4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shooter"
                app:layout_constraintTop_toTopOf="@id/button3"
                app:layout_constraintBottom_toBottomOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/button3"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- Recommendations -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Recomendações"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoDestaque" />

    <!-- Games -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/shinobi"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/fragile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/starbound"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/ninesols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/stoneshard"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/JogosRecomendados"
        android:src="@drawable/behindnowhere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <!-- navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageView7">

        <ImageView
            android:id="@+id/imgLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Home"
            android:src="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imgCenter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Favoritos"
            android:src="@drawable/favorito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imgRight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/Search"
            android:src="@drawable/search_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
